[package]
name = "fan-controller"
description = "Simple program that tries to maintain target temperature"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce paraller code generation
strip = true      # Strip symbols from binary

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
libc = "0.2.0"
